div's no longer default aligned to center

--- a/stylesheets/core.css
+++ b/stylesheets/core.css
@@ -32,7 +32,3 @@ p {
   margin:0;
   padding:0;
 }
-div 
-{
-  text-align: center;
-}
